app/public/css/style.less
@import url(https://fonts.googleapis.com/css?family=Lobster);
@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600);

@white: #fafafa;
@green: #088c5a;
@lightgrey: #dddddd;
@black: #121212;
@error: #ff0000;
@border-radius: 5px;

* {
  font-family: Source Sans Pro 14;
}

.jumbotron {
  background-color: @green;
}

.jumbotron h1 {
  color: @white;
  padding-top: 50px;
  font-family: Lobster;
}

.jumbotron h3 {
  font-family: Lobster;
}

.text-white {
  color: @white;
}

.row {
  padding-top: 25px;
  padding-bottom: 25px;
}

.navbar-inverse {
  background-color: @green;
}

.navbar-inverse .navbar-brand {
  color: @white - 15;
}

.navbar-inverse .navbar-nav>li>a, .navbar-inverse .navbar-text {
  color: @white - 15;
}

/* Left Green Sidebar*/
.sidebar {
  position: fixed;
  top: 50px;
  bottom: 0;
  background: @green;
  color: @white;
}

.sidebar a {
  color: @white; /* Changes font color on click */
    
}

.sidebar a:hover {
  color: @white; /* Changes font color on hover - WORKS */
}

.sidebar ul li a:focus {
    color: @white;
    background: saturate(@green, 5%);
}

.sidebar ul li a:hover {
    background: saturate(@green, 10%);
}

.sidebar ul li a:active {
    background: saturate(@green, 5%);
}

/* Table Stuff */

table {
    font-family: arial, sans-serif;
    width: 90%;
}

td, th {
    border: 1px solid @lightgrey;
    text-align: left;
}

.comments-table-style {
	font-family: arial, sans-serif;
    width: 95%;
	margin:2%;
	border-radius:@border-radius;
}


.profilepic {
  max-height: 250px;
  max-width: 250px;
  margin-left: auto;
  margin-right: auto;
  display: inherit;
}


.btn {
  background-color: @green;
  border-style:solid;
  border-color:@black;
  color: @white;
}

.btn:hover {
  background-color: @green + 15;
  color: @white;
}

.btn:active, .btn:focus {
  background-color: @green - 15;
  color: @white;
}

a {
  color: @green;
}

a:hover {
  color: saturate(@green, -5%);
}

a:active {
  color: saturate(@green, 5%);
}

.page-header {
  padding-top: 25px;
}

/** all modal styling for login **/
.vertical-alignment-helper {
    display:table;
    height: 100%;
    width: 100%;
    pointer-events:none;
}
.vertical-align-center {
 
    display: table-cell;
    vertical-align: middle;
    pointer-events:none;
}
.modal-content {
   
    width:inherit;
    height:inherit;
   
    margin: 0 auto;
    pointer-events: all;
}


/** styling for registration page **/

.panel,.panel-group{
	border-radius:@border-radius;
	border:none;
	background:@white;
   
}


.personal-info {
  background: @white;
  padding: 2%;
  border-radius:@border-radius;
  border:none;
  } 

/** Styling for the Login page **/

body {
  background: @lightgrey;
  
}
  

.login-style {
  border-radius:@border-radius;
  padding:1%;
  background:@white;
  border:none;
}

/** Minor Styling for Edit Profile Page **/

.well {
  
  background: @white;
}

.lobster {
  font-family: Lobster;
  color: @white;
}

.white {
	background:@white;
	border:none;
}

/** Styling for Profile page **/

.profile-style {
	border:none;
	border-radius:@border-radius;
	background:@white;
	width:100%;
}

p {
	word-wrap:break-word;
}

/** Styling for Tables **/

.table-style {

	border-radius:@border-radius;
}

thead {
	border-radius:@border-radius;
	background:black;
	color:@white;
}

tr {
	padding:2%;	
	text-align:center;
}

/** Styling for adding a posting - Organization **/

.posting-style {
	border-radius:@border-radius;
	border:none;
	background:@white;
	width: 95%;
	padding:2%;
	}
	
.posting-detail-style {
	border-radius:@border-radius;
	border:none;
	background:@white;
	padding:1%;
}

/** Styling for FAQ/how to **/

.faq-style {
	border-radius:@border-radius;
	border:none;
	background:@white;
	padding:1%;
	width:95%;
	margin:2%;
}

.page-number {
  text-align: center;
  font-family: Lobster;
  padding-top: 3px;
  font-size: 1.3em;
}

.error-text {
  color: @error;
  font-weight: bold;
  text-align: center;
}

.form-control {
  margin-bottom: 5px;
}

